fix overlapping

--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -1,3 +1,3 @@
 .mainContainer {
-  /*padding-top:20px;*/
+  height: 100%;
 }
